--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -193,25 +193,28 @@ https://github.com/seagle0128/.emacs.d
 #+end_src
 ** Custom Themes
 #+begin_src emacs-lisp
-  (use-package doom-themes
-  :straight t
-  :ensure t
-  :config
-  ;; Global settings (defaults)
-  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-        doom-themes-enable-italic t) ; if nil, italics is universally disabled
-  ;; load the theme
-  (load-theme 'doom-peacock t)
+    ;; (use-package doom-themes
+    ;; :straight t
+    ;; :ensure t
+    ;; :config
+    ;; ;; Global settings (defaults)
+    ;; (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+    ;;       doom-themes-enable-italic t) ; if nil, italics is universally disabled
+    ;; ;; load the theme
+    ;; (load-theme 'doom-peacock t)
 
-  ;; Enable flashing mode-line on errors
-  (doom-themes-visual-bell-config))
-  ;; Enable custom neotree theme (all-the-icons must be installed!)
-  ;;(doom-themes-neotree-config)
-  ;; or for treemacs users
-  ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
-  ;;(doom-themes-treemacs-config)
-  ;; Corrects (and improves) org-mode's native fontification.
-  ;;(doom-themes-org-config))
+    ;; ;; Enable flashing mode-line on errors
+    ;; (doom-themes-visual-bell-config))
+    ;; ;; Enable custom neotree theme (all-the-icons must be installed!)
+    ;; ;;(doom-themes-neotree-config)
+    ;; ;; or for treemacs users
+    ;; ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
+    ;; ;;(doom-themes-treemacs-config)
+    ;; ;; Corrects (and improves) org-mode's native fontification.
+    ;; ;;(doom-themes-org-config))
+    (use-package timu-macos-theme 
+      :straight t
+      :init (progn (load-theme 'timu-macos)))
 #+end_src
 ** Nerd-Fonts (All of the Icons doesnt work for me)
 #+begin_src emacs-lisp
@@ -870,6 +873,15 @@ make sure to setup authinfo
   (use-package format-all
     :straight t
     )
+#+end_src
+*** Better Compile Messages
+#+begin_src emacs-lisp
+  (use-package fancy-compilation
+    :straight t
+    :commands (fancy-compilation-mode))
+
+  (with-eval-after-load 'compile
+    (fancy-compilation-mode))
 #+end_src
 *** Snippets
 #+begin_src emacs-lisp
