--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -193,25 +193,35 @@ https://github.com/seagle0128/.emacs.d
 #+end_src
 ** Custom Themes
 #+begin_src emacs-lisp
-    (use-package doom-themes
-    :straight t
-    :ensure t
-    :config
-    ;; Global settings (defaults)
-    (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-          doom-themes-enable-italic t) ; if nil, italics is universally disabled
-    ;; load the theme
-    (load-theme 'doom-sourcerer t)
+  (use-package doom-themes
+  :straight t
+  :ensure t
+  :config
+  ;; Global settings (defaults)
+  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+        doom-themes-enable-italic t) ; if nil, italics is universally disabled
+  ;; load the theme
+  (load-theme 'doom-monokai-pro t)
 
-    ;; Enable flashing mode-line on errors
-    (doom-themes-visual-bell-config))
-    ;; Enable custom neotree theme (all-the-icons must be installed!)
-    ;;(doom-themes-neotree-config)
-    ;; or for treemacs users
-    ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
-    ;;(doom-themes-treemacs-config)
-    ;; Corrects (and improves) org-mode's native fontification.
-    ;;(doom-themes-org-config))
+  (doom-themes-org-config)
+
+  (setq doom-themes-treemacs-theme "doom-monokai-pro")
+
+  (doom-themes-treemacs-config)
+
+  ;; Enable flashing mode-line on errors
+  (doom-themes-visual-bell-config))
+  ;; Enable custom neotree theme (all-the-icons must be installed!)
+  ;;(doom-themes-neotree-config)
+  ;; or for treemacs users
+  ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
+  ;;(doom-themes-treemacs-config)
+  ;; Corrects (and improves) org-mode's native fontification.
+  ;;(doom-themes-org-config))
+#+end_src
+** All the Icons (to make doom-themes happy)
+#+begin_src emacs-lisp
+(use-package all-the-icons)
 #+end_src
 ** Nerd-Fonts (All of the Icons doesnt work for me)
 #+begin_src emacs-lisp
@@ -853,7 +863,7 @@ make sure to setup authinfo
             ("<tab>" . company-indent-or-complete-common))
       :custom
       (company-minimum-prefix-length 1)
-      (company-idle-delay 0.1)
+      (company-idle-delay 0)
       (company-selection-wrap-around t)
       (company-tooltip-align-annotations t))
 
