--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -315,7 +315,8 @@ https://github.com/seagle0128/.emacs.d
       "o" `(:ignore o :which-key "org")
       "oa" `(org-agenda :which-key "agenda")
       "g" `(:ignore g :which-key "git")
-      "gs" `(magit-status :which-key "status")))
+      "gs" `(magit-status :which-key "status"))
+    "r" `(elfeed :which-key "rss"))
 #+end_src 
 ** Emacs-Dashboard
 #+begin_src emacs-lisp
