--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -309,15 +309,14 @@ https://github.com/seagle0128/.emacs.d
       "tt" `(counsel-load-theme :which-key "choose theme")
       "e" `(:ignore e :which-key "explorer")
       "ee" `(treemacs :which-key "treemacs")
+      "es" `(eshell :which-key "eshell")
       "p" `(:ignore p :which-key "projects")
       "pp" `(projectile-switch-project :which-key "open project")
       "pk" `(projectile-kill-buffers :which-key "close project")
       "o" `(:ignore o :which-key "org")
       "oa" `(org-agenda :which-key "agenda")
       "g" `(:ignore g :which-key "git")
-      "gs" `(magit-status :which-key "status"))
-    "r" `(:ignore r :which-key "replacements")
-      "rr" `(elfeed :which-key "elfeed"))
+      "gs" `(magit-status :which-key "status")))
 #+end_src 
 ** Emacs-Dashboard
 #+begin_src emacs-lisp
