--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -305,18 +305,45 @@ https://github.com/seagle0128/.emacs.d
       :prefix "SPC"
       :global-prefix "C-SPC")
     (sakomacs/leader-keys
+      ;; code
+      "c" `(:ignore c :which-key "code")
+      "cc" `(compile :which-key "compile")
+      "cC" `(recompile :which-key "compile")
+      "cX" `(lsp-treeemacs-errors-list :which-ley "list errors")
+      ;; toggles
       "t" `(:ignore t :which-key "toggles")
       "tt" `(counsel-load-theme :which-key "choose theme")
-      "e" `(:ignore e :which-key "explorer")
-      "ee" `(treemacs :which-key "treemacs")
-      "es" `(eshell :which-key "eshell")
+      ;; search
+      "s" `(:ignore s :which-key "search")
+      "sb" `(swiper :which-key "search buffer")
+      ;; insert
+      "i" `(:ignore i :which-key "insert")
+      "ie" `(emoji-search :which-key "Emoji")
+      ;; project
       "p" `(:ignore p :which-key "projects")
       "pp" `(projectile-switch-project :which-key "open project")
       "pk" `(projectile-kill-buffers :which-key "close project")
-      "o" `(:ignore o :which-key "org")
-      "oa" `(org-agenda :which-key "agenda")
+      ;; open
+      "o" `(:ignore o :which-key "open")
+      "op" `(treemacs :which-key "treemacs")
+      "oP" `(treemacs-find-file :which-key "treemacs find file")
+      "oe" `(eshell :which-key "eshell")
+      ;; notes
+      "n" `(:ignore o :which-key "notes")
+      "na" `(org-agenda :which-key "agenda")
+      ;; quit
+      "q" `(:ignore q :which-key "quit")
+      "qq" `(delete-frame :which-key "close emacs")
+      "qK" `(kill-emacs :which-key "quit emacs")
+      ;; git
       "g" `(:ignore g :which-key "git")
-      "gs" `(magit-status :which-key "status")))
+      "gs" `(magit-status :which-key "status")
+      "gc" `(:ignore gc :which-key "create")
+      "gcr" `(magit-init :which-key "init repo")
+      "gcR" `(magit-clone :which-key "clone repo")
+      "gcc" `(magit-commit-create :which-key "commit")
+      "gci" `(forge-create-issue :which-key "issue")
+      "gcp" `(forge-create-pullreq :which-key "pull request")))
 #+end_src 
 ** Emacs-Dashboard
 #+begin_src emacs-lisp
